--- a/record.html
+++ b/record.html
@@ -205,7 +205,7 @@
       const thead = `
         <thead><tr>
           <th>日期</th><th>跑步(min)</th><th>肌力訓練</th>
-          <th>壁球(min)</th><th>教練指定</th>
+          <th>球類(min)</th><th>教練指定</th>
           <th>健行(min)</th><th>瑜伽</th><th>其他</th><th>跑速</th><th>心率</th><th>備註</th>
         </tr></thead>`;
       const tbody = data.map(r => `
