--- a/record.html
+++ b/record.html
@@ -79,7 +79,7 @@
   </style>
 </head>
 <body>
-  <h1>🏋️‍♀️ Workout 月累積記錄</h1>
+  <h1>🏋️‍♀️ 運動紀錄</h1>
   
   <div id="yearSelectContainer">
     <label for="yearSelect">📅 選擇年份：</label>
