--- a/record.html
+++ b/record.html
@@ -14,17 +14,7 @@
     }
     h1 {
       text-align: center;
-      margin-bottom: 5px;
-    }
-    #yearSelectContainer {
-      text-align: center;
-      margin: 10px 0 20px 0;
-    }
-    select {
-      padding: 5px 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 14px;
+      margin-bottom: 20px;
     }
     table {
       width: 100%;
@@ -79,8 +69,10 @@
   </style>
 </head>
 <body>
-  <h1>🏋️‍♀️ 運動紀錄</h1>
-   
+  <h1>🏋️‍♀️ Workout 月累積記錄</h1>
+
+  <div id="summaryTable"></div>
+
   <h2>🗓️ 最近 10 筆運動紀錄</h2>
   <div id="recentTable"></div>
 
@@ -132,15 +124,7 @@
 
         allData.sort((a, b) => new Date(a.date) - new Date(b.date));
 
-        const years = [...new Set(allData.map(d => d.date.slice(0, 4)))];
-        const select = document.getElementById("yearSelect");
-        select.innerHTML = `<option value="recent12">最近12個月</option>` +
-          years.map(y => `<option value="${y}">${y}</option>`).join("");
-
-        select.addEventListener("change", e => {
-          renderAll(e.target.value);
-        });
-
+        // 直接顯示最近 12 個月
         renderAll("recent12");
       })
       .catch(err => {
@@ -157,7 +141,7 @@
       allData.forEach(item => {
         const ym = item.date.slice(0, 7);
         if (!monthly[ym]) {
-          monthly[ym] = { running: 0, weight: 0, ball: 0, assigned: 0, trail: 0, yoga: 0, other: 0, speed: 0, heart_rate: 0 };
+          monthly[ym] = { running: 0, weight: 0, ball: 0, assigned: 0, trail: 0, yoga: 0, other: 0 };
         }
         monthly[ym].running += item.running;
         monthly[ym].weight += item.weight;
@@ -175,15 +159,10 @@
         strength: d.weight + d.yoga
       }));
 
-      if (mode === "recent12") {
-        if (labels.length > 12) {
-          labels = labels.slice(-12);
-          sums = sums.slice(-12);
-        }
-      } else {
-        const filter = labels.map((l, i) => ({ l, i })).filter(x => x.l.startsWith(mode));
-        labels = filter.map(x => x.l);
-        sums = filter.map(x => sums[x.i]);
+      // 只顯示最近 12 個月
+      if (labels.length > 12) {
+        labels = labels.slice(-12);
+        sums = sums.slice(-12);
       }
 
       renderSummaryTable(labels, sums);
@@ -264,9 +243,7 @@
           plugins: [ChartDataLabels],
           options: {
             responsive: true,
-            scales: { 
-              y: { beginAtZero: true }
-            },
+            scales: { y: { beginAtZero: true } },
             plugins: {
               legend: { display: false },
               datalabels: {
@@ -295,3 +272,5 @@
   </script>
 </body>
 </html>
+
+
