--- a/record.html
+++ b/record.html
@@ -160,15 +160,15 @@
       }));
 
       // 只顯示最近 12 個月
-      if (labels.length > 12) {
-        labels = labels.slice(-12);
-        sums = sums.slice(-12);
-      }
+     // if (labels.length > 12) {
+       // labels = labels.slice(-12);
+       // sums = sums.slice(-12);
+      //}
 
-      renderSummaryTable(labels, sums);
-      renderCharts(labels, sums);
-      renderAverages(sums);
-    }
+     // renderSummaryTable(labels, sums);
+      //renderCharts(labels, sums);
+     // renderAverages(sums);
+    //}
 
     function renderRecentTable(data) {
       const container = document.getElementById("recentTable");
